Test using updated hdp3.4-hive image